--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -55,6 +56,7 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -67,9 +69,8 @@ hr {
   overflow: visible;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+h6 {
+
 }
 
 p {
@@ -171,7 +172,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: spleen, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 1em;
 }
 
@@ -10250,4 +10251,49 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
+h1 {
+  background-color: black;
+  color: yellow;
+  width: 110%;
+  height: 20px;
+  padding: 50px;
+  padding-top: 10px;
+  margin-top: 0px;
+  margin-left: 10px;
+  text-align: left;
+  font-family: "Lucida Sans", "Lucida Sans Unicode", Helvetica;
+}
+
+data {
+  color: #2E3D69;
+  font-family: font-codigo;
+}
+
+.conteiner {
+  display: flex;
+  flex-direction: row;
+}
+
+div.texto-plano {
+  margin-left: 50%
+}
+
+#font-codigo{
+  font-family: 'spleen';
+}
+#banner{
+  width: 110%;
+  height: 70%;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+@font-face{
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helvetica;
+}
+@font-face1{
+  font-family: spleen;
+  src: url('https://raw.githubusercontent.com/luiztheblues/luiztheblues.github.io/a43e9978c998b8b39e6bd630ea5a2258c95fc020/source_files/fonts/spleen-8x16.otf');
+}
+
 /*# sourceMappingURL=bootstrap.css.map */
