--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,225 @@
-#letreiro{padding-left:10px}#lateral{border:1px solid red;position:relative;display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;word-wrap:break-word;background-color:#fff;background-clip:border-box;border:1px solid rgba(0,0,0,.125);border-radius:.25rem}#pindorama-letreiro{text-align:center;color:#ff0;background-color:#000;max-width:999px}#principal{display:flex;padding-top:60px}#sublinhado{text-decoration:underline}.card{position:relative;display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;min-width:10rem!important;word-wrap:break-word;background-color:#fff;background-clip:border-box;border:1px solid rgba(0,0,0,.125);border-radius:.25rem}.nav-item{font-size:20px!important}@media (max-width:575.98px){#pindorama-letreiro{font-size:30px;padding:10px}#banner{width:0}}@media (min-width:576px) and (max-width:767.98px){#pindorama-letreiro{font-size:30px;padding:10px}#banner{width:0}}strong{color:#000!important}.timeline{margin-top:20px;position:relative}.timeline:before{position:absolute;content:"";width:4px;height:calc(100% + 50px);background:#8a9196;background:-moz-linear-gradient(left,#8a9196 0,#7a8288 60%,#62696d 100%);background:-webkit-linear-gradient(left,#8a9196 0,#7a8288 60%,#62696d 100%);background:linear-gradient(to right,#8a9196 0,#7a8288 60%,#62696d 100%);left:14px;top:5px;border-radius:4px}.timeline-month{position:relative;padding:4px 15px 4px 35px;background-color:#1c3264;display:inline-block;width:auto;border:1px solid #17191b;border-right-color:#000;margin-bottom:30px;color:#fff}.timeline-month span{position:absolute;top:-1px;left:calc(100% - 10px);z-index:-1;white-space:nowrap;display:inline-block;background-color:#111;padding:4px 10px 4px 20px;border-top-right-radius:40px;border-bottom-right-radius:40px;border:1px solid #000;box-sizing:border-box}.timeline-month:before{position:absolute;content:"";width:20px;height:20px;background:#8a9196;background:-moz-linear-gradient(top,#8a9196 0,#7a8288 60%,#70787d 100%);background:-webkit-linear-gradient(top,#8a9196 0,#7a8288 60%,#70787d 100%);background:linear-gradient(to bottom,#8a9196 0,#7a8288 60%,#70787d 100%);border-radius:100%;border:1px solid #17191b;left:5px}.timeline-section{padding-left:35px;display:block;position:relative;margin-bottom:30px}.timeline-date{margin-bottom:15px;padding:2px 15px;background:linear-gradient(#000,#000 60%,#000);position:relative;display:inline-block;border:1px solid #17191b;color:#ff0;text-shadow:1px 1px 1px rgba(0,0,0,.3)}.timeline-section:before{content:"";position:absolute;width:30px;height:1px;background-color:#444950;top:12px;left:20px}.timeline-section:after{content:"";position:absolute;width:10px;height:10px;background:linear-gradient(to bottom,#8a9196 0,#7a8288 60%,#70787d 100%);top:7px;left:11px;border:1px solid #17191b;border-radius:100%}.timeline-section .col-sm-4{margin-bottom:15px}.timeline-box{position:relative;background-color:#444950;border-top-left-radius:0;border-bottom-right-radius:0;border:1px solid #17191b;transition:all .3s ease;overflow:hidden}.box-icon{position:absolute;right:5px;top:0}.box-title{padding:5px 15px;border-bottom:1px solid #17191b;background-color:#1c3363;color:#fff}.box-title i{margin-right:5px;color:#fff}.box-content{padding:5px 15px;background-color:#4169e1;color:#fff}.box-content strong{color:#666;font-style:italic;margin-right:5px}.box-item{margin-bottom:5px;color:#fff!important}.box-footer{padding:5px 15px;border-top:1px solid #17191b;background-color:#1c3363;text-align:right;font-style:italic;color:#fff}#rodape{padding:10px;background-color:#1c3264}#rodape-title{text-align:center;color:#fff;font-size:25px;font-weight:700}.rodape-desenvolvedores{text-align:center;color:#fff!important;font-size:18px}
+body {
+    display: flex;
+    flex-wrap: wrap;
+    font-family: sans;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    flex-basis: 100%;
+    flex-shrink: 0;
+}
+
+#pArticle {
+    font-size: 20px;
+}
+
+article {
+    flex-basis: 60%;
+    padding-left: 1em;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(100,135,220);
+    color: white;
+    padding: 0.3em; 
+    border-bottom: 2px solid black;
+}
+
+a { 
+    text-decoration: none; 
+}
+
+a:hover { 
+    text-decoration: underline; 
+}
+
+nav a, header a {
+    text-decoration: none;
+    color: inherit;
+}
+
+header h1 {
+    margin-left: 1em;
+    font-size: 50%;
+    font-style: italic;
+    color: black;
+}
+
+body > nav {
+    flex-basis: content;
+    padding-right: 1vw;
+    min-width: 16em;
+    border-right: 1px solid #ddd;
+    padding: 0;
+}
+
+body > nav > div a {
+    color: black;
+    display: block;
+    text-transform: capitalize;
+    font-weight: bold;
+    padding: 0.25em 1ex 0.25em 2mm;
+}
+
+body > nav > div a:hover { 
+    color: black!important; 
+    background-color: #fffff0; 
+    border-left: #ba9836 solid 0.2em; 
+    text-decoration: none; 
+}
+
+body > nav > div a:hover { 
+    color: black!important; 
+    background-color: #fffff0; 
+    border-left: #ba9836 solid 0.2em; 
+    text-decoration: none; 
+}
+
+body > nav > div p { 
+    font-weight: bold; 
+    margin: 0 0 0.5em 2mm; 
+    padding: 1em 0 0 0; 
+}
+
+
+nav ul {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    list-style-position: outside;
+    padding-left: 0;
+}
+
+nav li ul {
+    padding-left: 0.6em;
+}
+
+article { 
+    padding-left: 40px;  
+}
+
+article h1, article h2 { 
+    color: rgb(0,102,204); 
+    font-weight: bold; 
+    border-bottom: 2px solid rgb(0,102,204); 
+}
+
+article h3, article h4, article h5 {
+    color: rgb(0,102,204); 
+    font-weight: bold; margin: 2em 0 0 0; 
+}
+
+article h6, article h7, article h8 { 
+    color: rgb(0,102,204); 
+    font-weight: bold; 
+    margin: 2em 0 0 0; 
+}
+
+article a { 
+    color: rgb(0,102,204); 
+}
+
+article a:hover { 
+    color:  rgb(100,135,220); 
+}
+
+article img {
+	border:	0.4em solid black;
+	background-color: white!important;
+	padding: 0.2em;
+}
+
+#logo-section {
+    font-size: 40px;
+    background-color: rgba(153, 205, 50, 0.527);
+    border-bottom: 3px solid yellowgreen;
+}
+
+#subtitle {
+    font-size: 25px;
+}
+
+#ArticleTitle {
+    font-size: 40px;
+}
+
+#responsiveNavLateral {
+    font-size: 0px;
+}
+
+.negrito {
+    font-weight: bold;
+}
+
+.sublinhado {
+    text-decoration: underline;
+}
+
+/* // Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+    #logo-pindorama {
+        width: 0px;
+    }
+
+    #responsiveLinks {
+        width: 0px;
+        font-size: 0px;
+    }
+
+    #responsiveNavLateral {
+        font-size: 1em;
+    }
+
+    #ArticleTitle {
+        text-align: center;
+        padding: 0px !important;
+    }
+
+    #pArticle {
+        text-align: center;
+    }
+ }
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) { 
+    #logo-pindorama {
+        width: 0px;
+    }
+
+    #responsiveLinks {
+        width: 0px;
+        font-size: 0px;
+    }
+
+    #responsiveNavLateral {
+        font-size: 1em;
+    }
+
+    #ArticleTitle {
+        text-align: center;
+        padding: 0px !important;
+    }
+
+    #pArticle {
+        text-align: center;
+    }
+ }
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    
+ }
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    
+ }
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    
+ }
