--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     font-family: sans;
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 header {
@@ -48,6 +49,7 @@ header h1 {
     font-style: italic;
     color: black;
 }
+
 
 body > nav {
     flex-basis: content;
@@ -130,7 +132,7 @@ article a:hover {
 article img {
 	border:	0.4em solid black;
 	background-color: white!important;
-	padding: 0.2em;
+    padding: 0.2em;
 }
 
 #logo-section {
@@ -141,6 +143,10 @@ article img {
 
 #subtitle {
     font-size: 25px;
+}
+
+#pindoramaTK {
+    padding-right: 15px;
 }
 
 #ArticleTitle {
